<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/backline"
            android:layout_height="wrap_content"
            android:hint="Email Id"/>
        <EditText
            android:id="@+id/password_et"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/backline"
            android:paddingBottom="5dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"/>

        <EditText
            android:id="@+id/mobile_et"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/backline"
            android:paddingBottom="5dp"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"/>

        <EditText
            android:id="@+id/name_et"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/backline"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="name"/>
        <TextView
            android:id="@+id/signup_tv"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/rectagularbox"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:textColor="#ffffff"
            android:layout_height="45dp"
            android:text="@string/sign"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyhaveacc"/>

            <TextView
                android:id="@+id/signin_tv"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#10662D"
                android:layout_marginRight="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
